--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
@@ -11,5 +11,8 @@
         <h1 th:text="${msg}"></h1>
     </th:block>
 </div>
+<div>
+    <a href="Cars.html">List cars</a>
+</div>
 </body>
 </html>
