Работает, но попробую кое что доработать

--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
@@ -12,7 +12,7 @@
     </th:block>
 </div>
 <div>
-    <a href="Cars.html">List cars</a>
+    <a href="/cars">List cars</a>
 </div>
 </body>
 </html>
