--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/Cars.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/Cars.html
@@ -7,20 +7,28 @@
 </head>
 
 <body>
-    <table border="3px">
+    <a href="/cars?count=1">List of 1 car</a> <br>
+    <a href="/cars?count=2">List of 2 cars</a>  <br>
+    <a href="/cars?count=3">List of 3 cars</a> <br>
+    <a href="/cars?count=4">List of 4 cars</a> <br>
+    <a href="/cars?count=5">List of 5 cars(count == 5)</a> <br>
+    <a href="/cars?count=100">List of 5 cars(count > 5)</a>
+
+    <table style="margin: 15px auto 15px auto; background: bisque; border: 3px solid black">
         <tr>
-            <td>Model</td>
-            <td>Series</td>
-            <td>Serial Number</td>
+            <td style="padding: 3px 5px; border: 1px solid black">Model</td>
+            <td style="padding: 3px 5px; border: 1px solid black">Series</td>
+            <td style="padding: 3px 5px; border: 1px solid black">Serial Number</td>
         </tr>
 
         <tr th:each="car : ${cars}">
-            <td th:text="${car.getModel()}"></td>
+            <td style="padding: 3px 5px; border: 1px solid black" th:text="${car.getModel()}"></td>
 
-            <td th:text="${car.getSeries()}"></td>
+            <td style="padding: 3px 5px; border: 1px solid black" th:text="${car.getSeries()}"></td>
 
-            <td style="text-align: center" th:text="${car.getSerialnumber()}"></td>
+            <td style="padding: 3px 5px; border: 1px solid black" th:text="${car.getSerialnumber()}"></td>
         </tr>
     </table>
+
 </body>
 </html>
