--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
-<div>
-    <table style="border-collapse: collapse; border: 1px solid black; margin: auto; text-align: center">
-        <caption align="top">Users</caption>
-        <tr style="background: #2f2f2f; color: aliceblue;">
-            <td>Id User</td>
-            <td>Name User</td>
-            <td>Last name User</td>
-            <td>age User</td>
-            <td>Email User</td>
-            <td>Update User</td>
-            <td>Delete User</td>
-        </tr>
-        <tr style="border: 1px solid black" th:each="user: ${users}">
-            <td style="border: 1px solid black;" th:text="${user.getId()}"></td>
-            <td style="border: 1px solid black;" th:text="${user.getName()}"></td>
-            <td style="border: 1px solid black;" th:text="${user.getLastName()}"></td>
-            <td style="border: 1px solid black;" th:text="${user.getAge()}"></td>
-            <td style="border: 1px solid black;" th:text="${user.getEmail()}"></td>
-            <td style="border: 1px solid black;"><a href="#">Update user</a></td>
-            <td style="border: 1px solid black;"><a href="#">Delete user</a></td>
-        </tr>
-    </table>
-</div>
-<div>
-    <a href="/cars">List cars</a>
-</div>
-</body>
+    <body>
+        <div>
+            <a href="/form_User">
+                <h2>Create new user</h2>
+            </a>
+        </div>
+        <div>
+            <table style="border-collapse: collapse; border: 1px solid black; margin: auto; text-align: center">
+                <caption align="top">Users</caption>
+                <tr style="background: #2f2f2f; color: aliceblue;">
+                    <td>Id User</td>
+                    <td>Name User</td>
+                    <td>Last name User</td>
+                    <td>age User</td>
+                    <td>Email User</td>
+                    <td>Update User</td>
+                    <td>Delete User</td>
+                </tr>
+                <tr style="border: 1px solid black" th:each="user: ${users}">
+                    <td style="border: 1px solid black;" th:text="${user.getId()}"></td>
+                    <td style="border: 1px solid black;" th:text="${user.getName()}"></td>
+                    <td style="border: 1px solid black;" th:text="${user.getLastName()}"></td>
+                    <td style="border: 1px solid black;" th:text="${user.getAge()}"></td>
+                    <td style="border: 1px solid black;" th:text="${user.getEmail()}"></td>
+                    <td style="border: 1px solid black;">
+                        <a href="/form_User/" th:href="@{/form_User/?user_id={user_id}(user_id=${user.getId()})}">
+                            Update user
+                        </a>
+                    </td>
+                    <td style="border: 1px solid black;">
+                        <a href="/" th:href="@{/?user_id={user_id}(user_id=${user.getId()})}">Delete user</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </body>
 </html>
