--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
@@ -21,6 +21,10 @@
           <label for="email" style="display: block">Email</label>
           <input type="email" id="email" style="display: block" th:field="*{email}" th:value="*{getEmail()}" required>
 
+          <label for="roles" style="display: block">Roles</label>
+          <input type="text" id="roles" style="display: block"
+                 th:each="role: *{getRoles()}" th:field="role.role" th:value="${role.getRole()}" required>
+
           <button type="submit" th:text="${button_name}" style="display: block"></button>
       </form>
     </div>
