--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
@@ -6,26 +6,28 @@
   </head>
   <body>
     <div>
-      <form style="margin: auto" method="post" action="/" th:object="${user}">
-          <input type="hidden" th:field="*{id}" th:value="*{getId()}">
+      <form style="margin: auto" method="POST" action="/">
+          <input type="hidden" name="id" value="">
 
           <label for="name" style="display: block">Name</label>
-          <input type="text" id="name" style="display: block" th:field="*{name}" th:value="*{getName()}" required>
+          <input type="text" id="name" name="name" style="display: block">
 
           <label for="LastName" style="display: block">Last name</label>
-          <input type="text" id="LastName" style="display: block" th:field="*{lastName}" th:value="*{getLastName()}" required>
+          <input type="text" id="LastName" name="lastName"  style="display: block" required>
 
           <label for="age" style="display: block">Age</label>
-          <input type="number" id="age" style="display: block" th:field="*{age}" th:value="*{getAge()}" required>
+          <input type="number" id="age" name="age"  style="display: block" required>
 
           <label for="email" style="display: block">Email</label>
-          <input type="email" id="email" style="display: block" th:field="*{email}" th:value="*{getEmail()}" required>
+          <input type="email" id="email" name="email"  style="display: block" required>
 
-          <label for="roles" style="display: block">Roles</label>
-          <input type="text" id="roles" style="display: block"
-                 th:each="role: *{getRoles()}" th:field="role.role" th:value="${role.getRole()}" required>
+          <label for="roles" style="display: inline-block; margin: 18px 12px 0 0">Roles</label>
+          <select id="roles" name="role" style="display: inline-block; width: 125px">
+              <option value="3">User</option>
+              <option value="4">Admin</option>
+          </select>
 
-          <button type="submit" th:text="${button_name}" style="display: block"></button>
+          <button type="submit" style="display: block; margin-top: 15px; width: 178px" th:text="${button_name}" th:action="${action}"></button>
       </form>
     </div>
   </body>
