--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
@@ -6,20 +6,20 @@
   </head>
   <body>
     <div>
-      <form style="margin: auto" method="POST" action="/">
-          <input type="hidden" name="id" value="">
+      <form style="margin: auto" method="POST" th:action="${action}">
+          <input type="hidden" name="id" th:value="${user.getId()}">
 
           <label for="name" style="display: block">Name</label>
-          <input type="text" id="name" name="name" style="display: block">
+          <input type="text" id="name" name="name" style="display: block" th:value="${user.getName()}">
 
           <label for="LastName" style="display: block">Last name</label>
-          <input type="text" id="LastName" name="lastName"  style="display: block" required>
+          <input type="text" id="LastName" name="lastName"  style="display: block" th:value="${user.getLastName()}" required>
 
           <label for="age" style="display: block">Age</label>
-          <input type="number" id="age" name="age"  style="display: block" required>
+          <input type="number" id="age" name="age"  style="display: block" th:value="${user.getAge()}" required>
 
           <label for="email" style="display: block">Email</label>
-          <input type="email" id="email" name="email"  style="display: block" required>
+          <input type="email" id="email" name="email"  style="display: block" th:value="${user.getEmail()}" required>
 
           <label for="roles" style="display: inline-block; margin: 18px 12px 0 0">Roles</label>
           <select id="roles" name="role" style="display: inline-block; width: 125px">
