--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/newOrUpdate.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title th:text="${title}"></title>
-  </head>
-  <body>
-    <div>
-      <form style="margin: auto" method="POST" th:action="${action}" th:object="${user}">
-          <input type="hidden" th:field="*{id}" th:value="*{getId()}">
+</head>
+<body>
+<div>
+    <form style="margin: auto" method="POST" th:action="${action}" th:object="${user}">
+        <input type="hidden" th:field="*{id}" th:value="*{getId()}">
 
-          <label for="name" style="display: block">Name</label>
-          <input type="text" id="name" style="display: block" th:field="*{name}" th:value="*{getName()}">
+        <label for="name" style="display: block">Name</label>
+        <input type="text" id="name" style="display: block" th:field="*{name}" th:value="*{getName()}">
 
-          <label for="LastName" style="display: block">Last name</label>
-          <input type="text" id="LastName" style="display: block" th:field="*{lastName}" th:value="*{getLastName()}" required>
+        <label for="LastName" style="display: block">Last name</label>
+        <input type="text" id="LastName" style="display: block" th:field="*{lastName}" th:value="*{getLastName()}"
+               required>
 
-          <label for="age" style="display: block">Age</label>
-          <input type="number" id="age" style="display: block" th:field="*{age}" th:value="*{getAge()}" required>
+        <label for="age" style="display: block">Age</label>
+        <input type="number" id="age" style="display: block" th:field="*{age}" th:value="*{getAge()}" required>
 
-          <label for="email" style="display: block">Email</label>
-          <input type="email" id="email" style="display: block" th:field="*{email}" th:value="*{getEmail()}" required>
+        <label for="email" style="display: block">Email</label>
+        <input type="email" id="email" style="display: block" th:field="*{email}" th:value="*{getEmail()}" required>
 
-          <label for="roles" style="display: inline-block; margin: 18px 12px 0 0">Roles</label>
-          <select id="roles" style="display: inline-block; width: 125px">
-              <option>User</option>
-              <option>Admin</option>
-          </select>
+        <label for="roles" style="display: inline-block; margin: 18px 12px 0 0">Roles</label>
 
-          <button type="submit" style="display: block; margin-top: 15px; width: 178px" th:text="${button_name}"></button>
-      </form>
-    </div>
-  </body>
+        <div id="roles" th:each="role , stat : ${allRoles}">
+            <input type="checkbox" name="roles" th:value="${role}" th:checked="${#sets.contains(roles, role)}">
+            <label th:text="${role.getRole()}"></label>
+        </div>
+
+
+        <button type="submit" style="display: block; margin-top: 15px; width: 178px" th:text="${button_name}"></button>
+    </form>
+</div>
+</body>
 </html>
